@@ -4,14 +4,7 @@
 #
 
 require 'facter/util/manufacturer'
-    
-{:SerialNumber => "Serial Number",
- :Manufacturer => "Manufacturer",
- :ProductName=> "Product Name"}.each do |fact, name|
-    Facter.add(fact) do
-        confine :kernel => :linux
-        setcode do
-            Facter::Manufacturer.dmi_find_system_info(name)
-        end
-    end  
-end
+
+query = { 'System Information' =>  [ 'Manufacturer:', 'Product Name:' , 'Serial Number:'], 'Chassis Information' => 'Type:'}
+
+Facter::Manufacturer.dmi_find_system_info(query) 
